fix(styles): .product-preview-card__price, remove flex-wrap because it didn't do anything

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,6 @@ picture > img {
   padding-top: 1.125rem;	
   padding-bottom: 0.9375rem;
   display: flex;
-  flex-wrap: wrap;
   gap: 1.1875rem;
 }
 
